Validate aggregate Javadoc source roots